<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">FOT Voice</string>

    <!-- Splash & Logo -->
    <string name="fot_logo_desc">FOT Voice App Logo</string>

    <!-- Welcome Screen -->
    <string name="lets_dive_in">Let’s Dive In</string>
    <string name="welcome_message">Welcome to FOT News, your trusted source for the latest updates and headlines that matter most.</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <!-- Login Screen -->
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="signup_short">Sign Up</string>
    <string name="show_password">Show password</string>
    <string name="hide_password">Hide password</string>
    <string name="forgot_password">Forgot Password?</string>


    <!-- Sign Up Screen -->
    <string name="create_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_short">Log in</string>
    <string name="already_have_account">Already have an account?</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="loading">Loading...</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>
    <string name="profile">Profile</string>
    <string name="edit_info">Edit Info</string>
    <string name="user_details">User Details</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>


    <!-- ...other strings... -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recent_updates_list">List of recent news updates</string>
    <string name="news_categories_tabs">News categories tabs: Sports, Academic, Events</string>
    <string name="carousel_image_slider">Top news image carousel</string>
    <string name="carousel_image">Carousel image</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="tab_sports">Sports</string>
    <string name="tab_sports_content_desc">Sports Tab</string>
    <string name="tab_academic">Academic</string>
    <string name="tab_academic_content_desc">Academic Tab</string>
    <string name="tab_events">Events</string>
    <string name="tab_events_content_desc">Events Tab</string>


</resources>
